All film cameras added

--- a/120.md
+++ b/120.md
@@ -1,10 +1,61 @@
 # 120 Cameras
 
-## 6x6
+## Compact Style
 
 ### Baldixette
-Pop-out front lens
-Lens release feels a bit stiff
-Shutter is tempermental
-Could all do with a good oil but a iteresting thig
-Comes with hard case and originl paper manual
+- Pop-out front lens
+- Lens release feels a bit stiff
+- Shutter is tempermental
+- Could all do with a good oil but an iteresting thing
+- Comes with hard case and originl paper manual
+
+### Ilford Envoy
+- x-ref 620.md
+- Super cool art-deco styling
+- Push in/Pull out lens
+- Version 1 or 2 (pre-1960)
+- Shutter seems to fire fine
+- An attractive thing
+
+## Pseudo-TLR
+### Voigtländer Brilliant (1)
+- Everything moves freely
+- Presumably a later model - more shutter speeds
+- Shutter sticks a little at 1/10 or slower
+- Viewfinder lens is filthy - will benefit from a good clean
+- Rear clasps are 1x missing and 1x bet but still closes firmly and seems light tight
+- Should shoot nicely after a good clean
+- Leather branded case
+
+### Voigtländer Brilliant (2)
+- Everything moves freely
+- Fewer shutter speeds
+- Better than the previous one but still could do with a clean
+- Leather case
+- Advance feels like there's a mystery film in there so no opened!
+
+## TLR
+
+### Lubitel 2
+- A bit dusty outside but inside seems very clean
+- Fires well
+- Adjusters turn
+- Has "linked" lenses so focussing the viewing lens focusses the taking lens
+- f/4.5 75mm
+- Two piece leather case and strap
+
+## Box
+
+### Zeiss Ikon Tengor (54/14?)
+- Label states "Zeiss Ikon Film 6 1/2 x 11cm, D, 2 1/2 x 4 1/4 in"
+- Seems to cock and fire well
+- Assuming 120 film *but* they did make this in other sizes and there is nothing else indicative.
+- Leatherette has come away a tiny bit on the back but otherwise good condition for something ~90 years old. Should shoot!
+
+### Braun Imperial
+- All lenses need a good clean
+- Two speeds (M and Z - instant and time)
+- Two apertures - Light and Dark
+- Shutter fires
+- http://www.artdecocameras.com/cameras/braun/imperial-6x9/ 
+- Leather case with some minor damage
