--- a/35mm.md
+++ b/35mm.md
@@ -2,142 +2,148 @@
 
 ## Compact
 ### Siluet Electro
-Soviet. 1975-1981
-40mm f/4 triplet 
-https://camera-wiki.org/wiki/Siluet_Elektro
-Fires and progresses fine. Minor fogging of viewfinder but lens looks clear.
+- Soviet. 1975-1981
+- 40mm f/4 triplet 
+- https://camera-wiki.org/wiki/Siluet_Elektro
+- Fires and progresses fine. Minor fogging of viewfinder but lens looks clear.
 
 ### Praktica SA90 Nova Zoom
-38-90mm zoom lens
-Flash
-AF
-Takes 2xCR123A batteries (not included) so no way to test
-Mytery film inside! 
-Battery contacts look good so no reason to assume it won't work.
+- 38-90mm zoom lens
+- Flash
+- AF
+- Takes 2xCR123A batteries (not included) so no way to test
+- Mytery film inside! 
+- Battery contacts look good so no reason to assume it won't work.
 
 ### Praktica AP310
-Fixed focus
-Takes 2xAA
-Tested
+- Fixed focus
+- Takes 2xAA
+- Tested
 - Switch under lens turns camera on
 - Fires and advances
 - Flash charges and fires
-Soft branded case
+- Soft branded case
 
 ### Silette 1
-(Agfa)
-1953-1974
-(Believed < 1959)
-Agfa Color f/2.8 lens
-All seems to be shooting, progressing, etc well.
+- (Agfa)
+- 1953-1974
+- (Believed < 1959)
+- Agfa Color f/2.8 lens
+- All seems to be shooting, progressing, etc well.
 
 ### Silette L
-(Agfa)
-1956
-Colour Agar lens
-All seems good
-Mystery film loaded!
-Hard branded case included.
+- (Agfa)
+- 1956
+- Colour Agar lens
+- All seems good
+- Mystery film loaded!
+- Hard branded case included.
 
 ### Olympus Trip AF 21
-1995
-Takes 2xAA batteries
-All fires and progresses nicely. 
-Original manual
-Unbranded soft case
+- 1995
+- Takes 2xAA batteries
+- All fires and progresses nicely. 
+- Original manual
+- Unbranded soft case
 
 ### Dacora Dignette
-c1957-59
-All fires and seems to progress well
-All rings rotate
-Branding names worn off
-Partial leather case included
+- c1957-59
+- All fires and seems to progress well
+- All rings rotate
+- Branding names worn off
+- Partial leather case included
 
 ### Ilford Sportsman Mk4
-\>1962 \<1967
-Prontor 125
-Working but slightly sticky shutter. Seems to be easing with use
-Everything else moves freely
-Branded hard leather case included.
+- &gt;1962 &lt;1967
+- Prontor 125
+- Working but slightly sticky shutter. Seems to be easing with use
+- Everything else moves freely
+- Branded hard leather case included.
 
 ### Halina Paulette
-45mm lense
-c1965
-All seems to be working nicely.
+- 45mm lense
+- c1965
+- All seems to be working nicely.
 
 ### Halina Pet
-All seems to be working
-Mystery film!
-Front bezel missing
-Mystery film loaded!
+- All seems to be working
+- Mystery film!
+- Front bezel missing
+- Mystery film loaded!
 
 ### Kodak S1100XL
-No battery to test
-Soft case
+- No battery to test
+- Soft case
 
 ### Taron RIVAL
-Believed to be a coupled rangefinder
-Rings rotate but stiff
-Shutter seems stuck
+- Believed to be a coupled rangefinder
+- Rings rotate but stiff
+- Shutter seems stuck
 
 ### Beirette
-Trioplan f3.5 45mm lens
-Junior II shutter
-1960s version
-Seems to fire well when you remember about the double exposure stop.
+- Trioplan f3.5 45mm lens
+- Junior II shutter
+- 1960s version
+- Seems to fire well when you remember about the double exposure stop.
+
+### Boots 502 AF
+- No battery to check
+- Not so common!
+- Standard 90s-00s era compact camera
+- Soft case and original manual
 
 ## SLR
 
 ### ZENIT-B
-Helios 44-2 f/2 58mm lens - M42 Mount
-Fires really nicely - different speed settings feel good. Lovely!
+- Helios 44-2 f/2 58mm lens - M42 Mount
+- Fires really nicely - different speed settings feel good. Lovely!
 
 ### Yashica Electro AX
-Yashica Auto f/1.7 50mm lens - M42 Mount
-All fires nicely and seems to work great.
+- Yashica Auto f/1.7 50mm lens - M42 Mount
+- All fires nicely and seems to work great.
 
 ### Minolta XD5
-Some foam marks on the top of the camera but seems to fire nicely. Very positive
-Minolta strap
-Cbble release - feels seized
-unshot Tungsten film - no date on film but canister says /80!
-Minolta f/1.7 50mm lens - foam stuck to back plate will need cleaning. In leather case
-Various sync cables
-Misc lens hoods and caps
-Battery clip
-NISSIN Sycro eye slave unit in velcro box
-Hoya 52mm polarising filter
-Photax 52mm 80B D-A filter
-Vivitar 58mm polarising filter 
-Ambico 7762 Sepia square filter
-Power winder (?) base for camera
-Trigger grip (?) for camera
-Hanimex Computer CTX433 flash gun
-All in padded aluminium flight case
+- Some foam marks on the top of the camera but seems to fire nicely. Very positive
+- Minolta strap
+- Cbble release - feels seized
+- unshot Tungsten film - no date on film but canister says /80!
+- Minolta f/1.7 50mm lens - foam stuck to back plate will need cleaning. In leather case
+- Various sync cables
+- Misc lens hoods and caps
+- Battery clip
+- NISSIN Sycro eye slave unit in velcro box
+- Hoya 52mm polarising filter
+- Photax 52mm 80B D-A filter
+- Vivitar 58mm polarising filter 
+- Ambico 7762 Sepia square filter
+- Power winder (?) base for camera
+- Trigger grip (?) for camera
+- Hanimex Computer CTX433 flash gun
+- All in padded aluminium flight case
 
 ### Minolta 7000 (known as the MAXXUM 7000, 7000AF or a-7000 in Japan.)
-No battery (or more likely it's dead) so can't check anything like shutter count
-Mystery probably part-shot film inside.... whooo could be ghosties on it!
-Data back which I presume shows some data
-Bottom half of leather grip case attached
-A little dusty but looks generally clean and good - no issues I can see other than a tiny bit of bleed on the display screen edge.
-Lens cap on.
-Attached is a Minolta AF zoom looks like 28-80 which I believe was f/3.5-5.6 so standard kit lens. Funky rubber folding lens hood. Looks clear from what I see. (£20+ on ebay)
-Vivitar 70-20 f/3.5 I believe Macro zoom. Lovely smooth "push" motion to zoom. Looks lovely and clean, in leather hard case has a Hoya 1b skylight and PL-CIR polarisor on the front. I've seen this lot sell for £110+ on ebay. Lens caps on both ends.
-Vivitar AF illuminator 636AF Flash with many exciting things on the back inlcuded. Batteries are in and charging the caps when I turned it on! 
-Rubber lens hook - presumably from the macro soom? 
-Cobra Reflectalite hood for the flash gun
-Some empty 6x4 photo books for you to put your best works in and carry around to show people with pride.
-Screw on mini lens hood for the 28-80 in case you don't like the rubber one. Confirms it is 3.5-5.6
+- No battery (or more likely it's dead) so can't check anything like shutter count
+- Mystery probably part-shot film inside.... whooo could be ghosties on it!
+- Data back which I presume shows some data
+- Bottom half of leather grip case attached
+- A little dusty but looks generally clean and good - no issues I can see other than a tiny - bit of bleed on the display screen edge.
+- Lens cap on.
+- Attached is a Minolta AF zoom looks like 28-80 which I believe was f/3.5-5.6 so standard kit lens. Funky rubber folding lens hood. Looks clear from what I see. (£20+ on ebay)
+- Vivitar 70-20 f/3.5 I believe Macro zoom. Lovely smooth "push" motion to zoom. Looks lovely and clean, in leather hard case has a Hoya 1b skylight and PL-CIR polarisor on the front. I've seen this lot sell for £110+ on ebay. Lens caps on both ends.
+- Vivitar AF illuminator 636AF Flash with many exciting things on the back inlcuded. Batteries are in and charging the caps when I turned it on! 
+- Rubber lens hook - presumably from the macro soom? 
+- Cobra Reflectalite hood for the flash gun
+- Some empty 6x4 photo books for you to put your best works in and carry around to show people with pride.
+- Screw on mini lens hood for the 28-80 in case you don't like the rubber one. Confirms it is 3.5-5.6
 62mm polarising filter  C-P.L
-Empty filter case
-Rather beautiful Minolta branded brush
-Spare 49mm Minolta lens cap.
-Diffuser for the flash.
-Spare lens and body cap - both branded Minolta but unsized. Presume for this camera!
-Another spare filter case
-Two spare Cokin filter holders that are too confusing for my little brain. Presumed sized for the two lenses
-Cokin filter A005 sepia
-Various insturctions - how to use filters, the flash, sales receipt, guarantee, lenses, data back, the minolta club and the camera itself
-As a bonus I've got the business cards showing the previous ower lived just down the road from a place I used to work!
-All of this in a lovel gree Miranda bag in greren with main pocket, two end pockets, one large and two small front pockets, hand and shoulder straps
+- Empty filter case
+- Rather beautiful Minolta branded brush
+- Spare 49mm Minolta lens cap.
+- Diffuser for the flash.
+- Spare lens and body cap - both branded Minolta but unsized. Presume for this camera!
+- Another spare filter case
+- Two spare Cokin filter holders that are too confusing for my little brain. Presumed sized for the two lenses
+- Cokin filter A005 sepia
+- Various insturctions - how to use filters, the flash, sales receipt, guarantee, lenses, data back, the minolta club and the camera itself
+- As a bonus I've got the business cards showing the previous ower lived just down the road from a place I used to work!
+- All of this in a lovel gree Miranda bag in greren with main pocket, two end pockets, one large and two small front pockets, hand and shoulder straps
