--- a/35mm.md
+++ b/35mm.md
@@ -39,12 +39,12 @@
 - Mystery film loaded!
 - Hard branded case included.
 
-### Olympus Trip AF 21
+<s>### Olympus Trip AF 21
 - 1995
 - Takes 2xAA batteries
 - All fires and progresses nicely. 
 - Original manual
-- Unbranded soft case
+- Unbranded soft case</s>
 
 ### Dacora Dignette
 - c1957-59
