--- a/35mm.md
+++ b/35mm.md
@@ -39,7 +39,7 @@
 - Mystery film loaded!
 - Hard branded case included.
 
-<s>### Olympus Trip AF 21
+### <s>Olympus Trip AF 21
 - 1995
 - Takes 2xAA batteries
 - All fires and progresses nicely. 
