--- a/35mm.md
+++ b/35mm.md
@@ -94,9 +94,9 @@
 
 ## SLR
 
-### ZENIT-B
+### <s>ZENIT-B
 - Helios 44-2 f/2 58mm lens - M42 Mount
-- Fires really nicely - different speed settings feel good. Lovely!
+- Fires really nicely - different speed settings feel good. Lovely!</s>
 
 ### Yashica Electro AX
 - Yashica Auto f/1.7 50mm lens - M42 Mount
