Sold Kodak Duaflex

--- a/620.md
+++ b/620.md
@@ -2,10 +2,10 @@
 
 ## Pseudo-TLR
 
-### Kodak Duaflex II
+### <s>Kodak Duaflex II
 - 1950-54
 - Film indicator window and bezel have come off but inside camera body ready to be glued back on.
-- Fires nicely
+- Fires nicely</s>
 
 ## Compact Style
 
