--- a/120.md
+++ b/120.md
@@ -18,21 +18,21 @@
 - An attractive thing
 
 ## Pseudo-TLR
-### Voigtländer Brilliant (1)
+### <s>Voigtländer Brilliant (1)
 - Everything moves freely
 - Presumably a later model - more shutter speeds
 - Shutter sticks a little at 1/10 or slower
 - Viewfinder lens is filthy - will benefit from a good clean
 - Rear clasps are 1x missing and 1x bet but still closes firmly and seems light tight
 - Should shoot nicely after a good clean
-- Leather branded case
+- Leather branded case</s>
 
-### Voigtländer Brilliant (2)
+### <s>Voigtländer Brilliant (2)
 - Everything moves freely
 - Fewer shutter speeds
 - Better than the previous one but still could do with a clean
 - Leather case
-- Advance feels like there's a mystery film in there so no opened!
+- Advance feels like there's a mystery film in there so no opened!</s>
 
 ## TLR
 
