--- a/120.md
+++ b/120.md
@@ -36,13 +36,13 @@
 
 ## TLR
 
-### Lubitel 2
+### <s>Lubitel 2
 - A bit dusty outside but inside seems very clean
 - Fires well
 - Adjusters turn
 - Has "linked" lenses so focussing the viewing lens focusses the taking lens
 - f/4.5 75mm
-- Two piece leather case and strap
+- Two piece leather case and strap</s>
 
 ## Box
 
